sas-core/main/default/objects/Bank_Account_Info__c/Bank_Account_Info__c.object-meta.xml
<CustomObject>
    <label>Bank Account Information</label>
    <nameField>
        <displayFormat>BAI-{000000}</displayFormat>
        <label>Bank Account Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>