sas-core/main/default/objects/Bank_Account_Info__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this Bank Account be excluded from control</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>