sas-core/main/default/objects/Bank_Account_Info__c/fields/Claim_Firm__c.field-meta.xml
<CustomField>
    <fullName>Claim_Firm__c</fullName>
    <label>Claim Firm</label>
    <referenceTo>Claim_Firm__c</referenceTo>
    <relationshipLabel>Bank Account Information</relationshipLabel>
    <relationshipName>Bank_Account_Information</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>