sas-core/main/default/objects/Bank_Account_Info__c/validationRules/Claim_Firm_is_reviewed_for_payments.validationRule-meta.xml
<ValidationRule>
    <fullName>Claim_Firm_is_reviewed_for_payments</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = true ,  TEXT(Claim_Firm__r.Status__c)  &lt;&gt; &apos;Reviewed&apos;)</errorConditionFormula>
    <errorMessage>The Claim Firm needs to be reviewed before activating a bank account for it</errorMessage>
</ValidationRule>